# Kestrel

./: .env.example  .gitignore  CLAUDE.md  KESTREL-GOAML-COVERAGE-PROMPT.md  KESTREL-INTELLIGENCE-CORE-PROMPT.md  KESTREL-RESUME-V2.md  KESTREL-RESUME.md  KESTREL-SOVEREIGN-LEDGER-CONTINUITY.md  KESTREL-V3-PROMPT.md  KESTREL-WORLD-CLASS-BUILD-V2.md  README.md
engine/: multi_bank_accounts.sql  multi_bank_seed.sql  multi_bank_str_reports.sql  multi_bank_transactions.sql  pyproject.toml  render.yaml
engine/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py  observability.py
engine/scripts/: apply_migrations.py  export_training_corpus.py  generate_synthetic_corpus.py  import_watchlist_archive.py  ocr_bfiu_pdfs.py
engine/seed/: __init__.py  dbbl_synthetic.py  entities.py  fixtures.py  load_customers_synthetic.py  load_dbbl_synthetic.py  load_demo_bank.py  load_watchlist_synthetic.py  multi_bank_synthetic.py  multi_bank_to_sql.py  organizations.py  patterns.py  run.py  str_reports.py  transactions.py
engine/tests/: test_admin_services.py  test_admin_synthetic_backfill.py  test_ai_outcome.py  test_ai_phase2.py  test_ai_redteam.py  test_alerts_cases_phase6.py  test_apply_migrations.py  test_audit_retention.py  test_auth_phase3.py  test_billing.py  test_bis_source.py  test_confidence_routing.py  test_config_env_paths.py  test_corpus_exporter.py  test_cross_bank.py  test_dbbl_generated_dataset.py  test_dbbl_synthetic.py  test_disseminations_typing.py  test_evaluator_core.py  test_investigation_agent.py  test_investigation_labels.py  test_kyc.py  (+42 more)
(+726 files in other folders)
