[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kestrel-engine"
version = "0.1.0"
description = "Kestrel intelligence engine"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "pydantic-settings>=2.10.1",
  "python-jose[cryptography]>=3.5.0",
  "celery[redis]>=5.5.3",
  "redis>=6.4.0",
  "networkx>=3.5",
  "PyYAML>=6.0.2",
  "python-multipart>=0.0.20",
  "httpx>=0.28.1",
  "weasyprint>=66.0",
  "pdfplumber>=0.11.7",
  "pandas>=2.3.2",
  "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "seed"]
